--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,29 @@
 </head>
 <body>
 
+<div id="framecontentLeft">
+   <div class="innertube">
+
+
+
+</div>
+</div>
+
+<div id="framecontentRight">
+<div class="innertube">
+
+
+</div>
+</div>
+
+
+<div id="maincontent">
+<div class="innertube">
+
 <%= yield %>
+
+</div>
+</div>
 
 </body>
 </html>
