--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,21 @@
 <div id="framecontentLeft">
    <div class="innertube">
 
-
-
-</div>
+  </div>
 </div>
 
 <div id="framecontentRight">
-<div class="innertube">
+  <div class="innertube">
 
-
-</div>
+  </div>
 </div>
 
 
 <div id="maincontent">
-<div class="innertube">
-
-<%= yield %>
-
-</div>
+  <img src='<%=asset_path "quote_header.jpg"%>' />
+  <div class="innertube">
+   <%= yield %>
+  </div>
 </div>
 
 </body>
