--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
 
 <div id="maincontent">
   <img src='<%=asset_path "quote_header.jpg"%>' />
+  <% unless isLoggedIn? %>
+     <% ['facebook'].each do |service_provider| %>
+       <%= link_to image_tag("#{service_provider}_64.png", :size => "64x64"), :fblogin %>
+     <% end %>
+  <% end %>   
   <div class="innertube">
    <%= yield %>
   </div>
