removed bootstrap from application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Quotesapp - Read quotes from great authors and share with your friends</title>
-  <%= stylesheet_link_tag    "application", "bootstrap", :media => "all" %>
+  <%= stylesheet_link_tag    "application",  :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
