--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
        <%= link_to image_tag("#{service_provider}_64.png", :size => "64x64"), :fblogin %>
      <% end %>
   <% else %>
-    <%= session[:currentuser] %>
+    <%= currentUser %>
   <% end %>   
   <div class="innertube">
    <%= yield %>
