--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,13 @@
 
 <div id="maincontent">
   <img src='<%=asset_path "quote_header.jpg"%>' width="1200" height='100' />
-  <% unless isLoggedIn? %>
-     <% ['facebook'].each do |service_provider| %>
-       <%= link_to image_tag("#{service_provider}_64.png", :size => "64x64"), :fblogin %>
-     <% end %>
-  <% else %>
-    <%= currentUser %>
-  <% end %>   
+           <% unless isLoggedIn? %>
+             <% ['facebook'].each do |service_provider| %>
+               &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to image_tag("#{service_provider}_64.png", :size => "64x64"), :fblogin %>
+             <% end %>
+           <% else %>
+             <%= currentUser %>
+           <% end %> 
   <div class="innertube">
    <%= yield %>
   </div>
