--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -7,7 +7,7 @@
        <blockquote>
        <p><%= quote.quote %> </p>
        <small><%= quote.author %></small>
-       <a href='/posttofb?quote_id=<%= quote.id %>'>Share</a><br /><br />
+       <a href='/posttofb?quote_id=<%= quote.id %>'>Share</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='/posttotwitter?quote_id=<%= quote.id %>'>Tweet</a><br /><br />
        Category: <a href='/quotes?category=<%= quote.category.name %>'><%= quote.category.name %></a> &nbsp;&nbsp;&nbsp;Tags: <%= quote.tags %>&nbsp;&nbsp;&nbsp;</blockquote>
 <% end %>
 
