--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,20 +21,23 @@
 
 
 <div id="maincontent">
-  <img src='<%=asset_path "quote_header.jpg"%>' width="1200" height='100' />
-   <table><tr><td>
-           <% unless isLoggedIn? %>
-              <%= link_to image_tag('login-facebook-button.png'), :fblogin %>
+  <table><tr><td><img src='<%=asset_path "quote_header.jpg"%>' width="1200" height='100' /></td>
+  <td>
+           <table><tr><td><% unless isLoggedIn? %>
+              <%= link_to image_tag('login-facebook-button.png', :size => "200x25"), :fblogin %>
            <% else %>
               <span class="label">Logged in facebook as: <%= currentUser %></span>
-           <% end %> </td></tr>
+           <% end %></td></tr>
+           <tr><td>&nbsp;&nbsp;</td></tr>
            <tr><td>
            <% unless isLoggedInTwitter? %>
-	       <%= link_to image_tag('login-twitter-button.png'), :twitterlogin %>
+	       <%= link_to image_tag('login-twitter-button.png', :size => "200x25"), :twitterlogin %>
 	   <% else %>
 	       <span class="label">Logged in twitter as: <%= currentTwitterUser %></span>
-           <% end %> 
-           </td></tr></table>
+           <% end %> </td></tr>
+           </table>
+   </td>
+   </tr></table>
   <div class="innertube">
    <%= yield %>
   </div>
