--- a/app/views/user_session/new.html.erb
+++ b/app/views/user_session/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="span6 offset3">
-      <%= form_for(:user_session, :url => user_sessions_path) do |f| %>
+      <%= form_for(:user_session, :url => create_user_sessions_path) do |f| %>
 
             <%= f.label :email %>
 	    <%= f.text_field :email %>
