--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row-fluid"><div class="span12"></div></div>
   <div class="row-fluid">
     <div class="span2">
