--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,12 +69,12 @@
 </div>
 
 <div class="container">
-  <div class="row-fluid"><div class="span12"></div></div>
-  <div class="row-fluid">
-    <div class="span2">
+  <div class="row"><div class="span12"></div></div>
+  <div class="row">
+    <div class="span1">
       <!--Sidebar content-->
     </div>
-    <div class="span10"><br />
+    <div class="span11"><br />
       <%= yield %>
     </div>
   </div>
