addding authors route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,6 @@
 
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-            <div class="container">
             <ul class="nav">
                 <li> <h1><a class="brand" href="/">Quotable</a></h1></li>
                 <li class="active"><a href="#">Home</a></li>
@@ -64,14 +63,13 @@
                 </ul>
             </li>
           </ul>
-        </div>
     </div>
 </div>
 <br />
 <br />
 <br />
-<div class="container">
-  <div class="row">
+<div class="container-fluid">
+  <div class="row-fluid">
     <div class="span1">
       <!--Sidebar content-->
     </div>
