addding authors route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-            <ul class="nav">
+        <div class="container-fluid">
+          <ul class="nav">
                 <li> <h1><a class="brand" href="/">Quotable</a></h1></li>
                 <li class="active"><a href="#">Home</a></li>
                 <li class="dropdown">
@@ -63,11 +64,11 @@
                 </ul>
             </li>
           </ul>
+	</div>     
     </div>
 </div>
-<br />
-<br />
-<br />
+<hr>
+
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span1">
@@ -79,6 +80,8 @@
   </div>
 </div>
 
+<hr>
 
+<footer><p>&copy; Quoteable 2012</p></footer>
 </body>
 </html>
