--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,36 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <style type="text/css">
+    body, html {
+                height: 100%;
+                overflow: hidden;
+                }
+
+    .navbar-inner {
+                   height: 40px;
+                  }
+
+     .scrollable {
+                  height: 100%;
+                  overflow: auto;
+                  }
+
+      .max-height {
+                  height: 100%;
+                  }
+
+
+       .no-overflow {
+     	            overflow: hidden;
+	            }
+
+			
+	.pad40-top {
+	            padding-top: 40px;
+	           }
+
+ </style>
 </head>
 <body>
 
