--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>`
 <html>
 <head>
   <title>Quotesapp - Read quotes from great authors and share with your friends</title>
@@ -6,35 +6,6 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <style type="text/css">
-    body, html {
-                height: 100%;
-                overflow: hidden;
-                }
-
-    .navbar-inner {
-                   height: 40px;
-                  }
-
-     .scrollable {
-                  height: 100%;
-                  overflow: auto;
-                  }
-
-      .max-height {
-                  height: 100%;
-                  }
-
-
-       .no-overflow {
-     	            overflow: hidden;
-	            }
-
-			
-	.pad40-top {
-	            padding-top: 40px;
-	           }
-
  </style>
 </head>
 <body>
@@ -61,7 +32,7 @@
                 <ul class="dropdown-menu">
 		   <% if @authors
 		      @authors.each do |author| %>
-		      <li><a href=""><%=  author %></a></li>
+		      <li><a href="/quotes?author=<%= author %>"><%=  author %></a></li>
 		   <% end
 		   end %> 
                 </ul>
@@ -104,7 +75,7 @@
     <div class="span1">
       <!--Sidebar content-->
     </div>
-    <div class="span11"><br />
+    <div class="span11" style="overflow:auto"><br />
       <%= yield %>
     </div>
   </div>
