addding authors route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,12 +70,12 @@
 </div>
 <hr>
 
-<div class="container-fluid">
+<div class="container-fluid" style="overflow:scroll">
   <div class="row-fluid">
     <div class="span1">
       <!--Sidebar content-->
     </div>
-    <div class="span11" style="overflow:auto"><br />
+    <div class="span11"><br />
       <%= yield %>
     </div>
   </div>
