updated to use flash messages and correct session variables

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,6 +85,7 @@
       <!--Sidebar content-->
     </div>
     <div class="span11"><br />
+       <%= render :partial => "shared/flash_messages", :locals => {:flash => flash} %>
       <%= yield %>
     </div>
   </div>
