--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account</a>
                   <ul class="dropdown-menu">
-                    <li><% unless isLoggedIn? %>
+                    <li><% unless isLoggedInFacebook? %>
                           <%= link_to image_tag('login-facebook-button.png', :size => "200x25"), :fblogin %>
                         <% else %>
                            <span class="label">Logged in facebook as: <%= currentUser %></span>
