updated fb user display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
                         <% end %>
                     </li>
                     <li class="divider"></li>
-                    <li><% if isLoggedIn? %><a class="btn" href="#">Logout</a><% else %><a class="btn" href="/login">Login</a>&nbsp;&nbsp;<a class="btn" href="/register">Register</a><% end %></li>
+                    <li><% if isLoggedIn? %><a class="btn" href="/logout">Logout</a><% else %><a class="btn" href="/login">Login</a>&nbsp;&nbsp;<a class="btn" href="/register">Register</a><% end %></li>
                 </ul>
             </li>
           </ul>
