--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,7 @@
-
+<header class="jumbotron">
 <h1>Quotes</h1><br />
+</header>
+
 <% @quotes.each do |quote| %>
        <blockquote>
            <strong><%= quote.quote %> </strong>
