--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,12 +55,11 @@
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Authors</a>
                 <ul class="dropdown-menu">
-		   <% if @authors
+		   <% if @authors %>
 		        <% @authors.each do |author| %>
 		          <li><a href="/quotes?author=<%= author %>"><%=  author.capitalize %></a></li>
 	 	        <% end %>
-		   <% end
-		   end %> 
+		   <% end %> 
                 </ul>
                 </li>
 	    </ul>
