--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,6 +112,14 @@
            <a href='/quotes?tag=<%= tag %>' ><%= tag.capitalize %></a>&nbsp;&nbsp;
 	<% end %><br />
       <% end %>
+      <br />
+      <br />
+      <h2>Authors</h2>
+      <% @authors.each_slice(3) do |sauthors| %>
+         <% sauthors.each do |author| %>
+	   <a  href="/quotes?author=<%= author %>"><%= author.capitalize %></a>&nbsp;&nbsp;&nbsp;&nbsp;
+	 <% end %>
+      <% end %>
     </div>
 
   </div>
