--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,7 +109,7 @@
       <h2>Tags</h2>
       <% getTags.each_slice(5) do |stags| %>
         <% stags.each do |tag| %>
-           <a href='/quotes?tag=<%= tag %>' ><%= tag.capitalize %></a>&nbsp;&nbsp;
+           <a href='/quotes?tag=<%= tag %>' ><%= tag.capitalize %></a>,&nbsp;&nbsp;
 	<% end %><br />
       <% end %>
       <br />
@@ -117,7 +117,7 @@
       <h2>Authors</h2>
       <% @authors.each_slice(3) do |sauthors| %>
          <% sauthors.each do |author| %>
-	   <a  href="/quotes?author=<%= author %>"><%= author.capitalize %></a>&nbsp;&nbsp;&nbsp;&nbsp;
+	   <a  href="/quotes?author=<%= author %>"><%= author.capitalize %></a>,&nbsp;&nbsp;&nbsp;&nbsp;
 	 <% end %>
       <% end %>
     </div>
